damsel-cli/tests/snapshots/cli_snapshots__imports_snapshot.snap
---
source: damsel-cli/tests/cli_snapshots.rs
expression: stdout
---
0x100004000 -     -     /usr/lib/libSystem.B.dylib     _puts
