damsel-cli/tests/snapshots/cli_snapshots__info_snapshot.snap
---
source: damsel-cli/tests/cli_snapshots.rs
expression: stdout
---
path: $REPO/fixtures/bin/arm64-symbolized
format: MachO
architecture: arm64
endianness: Little
entry: 0x1000004b8
platform: macos
slice: offset=0x0 size=0x82e0 universal=false subtype=0x0
available_slices: 1
counts: segments=4 sections=5 symbols=5 imports=1 relocations=0
objc: class_names=0 selectors=0 methods=0 pointer_refs=0 classes=0 protocols=0 categories=0
dyld: dylibs=1 rpaths=0 exports=3 function_starts=3 bindings=2 stubs=1 helpers=0 rebases=false binds=true chained_fixups=true
dylibs:
  /usr/lib/libSystem.B.dylib
