damsel-cli/tests/snapshots/cli_snapshots__objc_methods_snapshot.snap
---
source: damsel-cli/tests/cli_snapshots.rs
assertion_line: 120
expression: stdout
---
image_info_flags: 0x40
summary: class_names=6 selectors=44 methods=44 pointer_refs=44 classes=2 protocols=3 categories=0
method_records:
  owner=GreetingProviding kind=protocol class_method=false selector=- selector_source=Unresolved impl=0x100001228 types=@16@0:8
  owner=GreetingProviding kind=protocol class_method=false selector=- selector_source=Unresolved impl=0x100001234 types=@16@0:8
  owner=GreetingProviding kind=protocol class_method=true selector=- selector_source=Unresolved impl=0x1000011f8 types=@16@0:8
  owner=GreetingProviding kind=protocol class_method=false selector=- selector_source=Unresolved impl=0x100001338 types=@16@0:8
